--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".MainMenuActivity"
             android:label="@string/title_activity_main_menu"
             android:theme="@style/Theme.AppCompat.Light" />
+        <activity
+            android:name=".ChatActivity"
+            android:label="@string/title_talk_to_leader"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity android:name="CustomGalleryActivity" >
             <intent-filter>
                 <action android:name="luminous.ACTION_PICK" />
