--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile files('src/main/libs/ksoap2-j2se-full-2.1.2.jar')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-    compile files('src/main/libs/Parse-1.3.3.jar')
+    //compile files('src/main/libs/Parse-1.3.3.jar')
+    compile 'com.parse.bolts:bolts-android:1.+'
+    //compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile files('libs/Parse-1.9.1.jar')
+    compile files('libs/bolts-android-1.2.0.jar')
 }
 
 android {
